tests/purs/failing/TypeQualification1.out
Error found:
in module [33mMain[0m
at tests/purs/failing/TypeQualification1.purs:10:6 - 10:13 (line 10, column 6 - line 10, column 13)

  Could not match type
  [33m        [0m
  [33m  String[0m
  [33m        [0m
  (defined in module [33mPrim[0m)
  with type
  [33m      [0m
  [33m  L1.X[0m
  [33m      [0m
  (defined in module [33mLib1[0m)

while checking that type [33mString[0m
  is at least as general as type [33mX[0m
while checking that expression [33m"wrong"[0m
  has type [33mX[0m
in value declaration [33mx1[0m

See https://github.com/purescript/documentation/blob/master/errors/TypeConstructorsDoNotUnify.md for more information,
or to contribute content related to this error.

